fix: tooltip text alignment in IE (#978)

--- a/src/fc.css
+++ b/src/fc.css
@@ -48,10 +48,6 @@ text {
   border-collapse: separate;
 }
 
-.tooltip.cell {
-  dominant-baseline: hanging;
-}
-
 .plot-area {
   overflow: hidden;
 }
